--- a/css/vendas.css
+++ b/css/vendas.css
@@ -100,6 +100,7 @@ input {
     position: relative;
     display: inline-block;
 }
+
 .custom-combobox-toggle {
     position: absolute;
     top: 0;
@@ -107,7 +108,23 @@ input {
     margin-left: -1px;
     padding: 0;
 }
+
 .custom-combobox-input {
     margin: 0;
     padding: 5px 10px;
+}
+
+.page-container {
+    padding-left: 0px !important;
+}
+
+/* ----- Header ----- */
+.header-desktop {
+    left: 0px !important;
+}
+
+.previewProd {
+    width: 100%;
+    height: auto !important;
+
 }
